--- a/FoodOS.html
+++ b/FoodOS.html
@@ -8,21 +8,28 @@
     <title>Best Online Food Delivery Service in India | MyOnlineMeal.com</title>
     <link rel="stylesheet" href="FoodOS.css">
     <link rel="stylesheet" media="screen and (max-width: 1170px)" href="css/phone.css">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Baloo+Bhai|Bree+Serif&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img src="logo.png" alt="EKhaja.com">
+            <b class="Mainlogo" alt="EKhaja.com" style="color:#00bfff;">E</b>
+            <b class="Mainlogo" style="color:#ff8000"> &nbsp;Khaja</b>
         </div>
         <ul>
-            <li class="item"><a href="#home">Home</a></li>
+            <li class="item" style="margin-left:50px ;"><a href="#home">Home</a></li>
             <li class="item"><a href="#services-container">Services</a></li>
             <li class="item"><a href="#client-section">Our Clients</a></li>
-            <li class="item"><a href="#contact">Contact Us</a></li>
+            <li class="item"><a href="#contact">Contact Us</a></li> 
         </ul>
     </nav>
+    
+        <div>
+          <button class="container" id="reg">Login</button>
+          <button class="container" id="log">Sign up</button>
+        </div>
+      
 
     <section id="home">
         <h1 class="h-primary">Welcome to EKhaja</h1>
@@ -106,7 +113,7 @@
 
     <footer>
         <div class="center">
-            Copyright &copy; www.myOnlineMeal.com. All rights reserved!
+            Copyright &copy; www.ekhaja.com. All rights reserved!
         </div>
     </footer>
 </body>
